test/sematest/invalid/void_field.java
class Foo {
  public void some_field;

  public static void main(String[] args) {

  }
}
